# ooo_superscalar_risc_simulator

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  EXPERIMENTS.md  README.md  VERIFICATION.md
benchmarks/: div_heavy.expect  div_heavy.trace  dotprod.expect  dotprod.trace  dotprod_unroll.expect  dotprod_unroll.trace  ilp_parallel.expect  ilp_parallel.trace  ilp_serial.expect  ilp_serial.trace  matmul.expect  matmul.trace  mul_heavy.expect  mul_heavy.trace  ptrchase.expect  ptrchase.trace  saxpy.expect  saxpy.trace  vecadd.expect  vecadd.trace
golden/: golden_main.cpp  golden_model.cpp
include/: cdb_arbiter.hpp  decode.hpp  dispatch_reg.hpp  execution_engine.hpp  golden_model.hpp  gshare_predictor.hpp  hex_loader.hpp  instruction_fetch_queue.hpp  load_store_queue.hpp  processor.hpp  rat_checkpoints.hpp  register_alias_table.hpp  reorder_buffer.hpp  reservation_station.hpp  return_address_stack.hpp  trace_loader.hpp  types.hpp
include/mem/: dcache.hpp  dram_simple.hpp  icache.hpp  mem_types.hpp  memory_system.hpp
results/: BP_COMPARE.md  SIZING_STUDY.md  alu.csv  best_ipc.csv  bp_compare.csv  div.csv  fwd.csv  ifq.csv  lsq.csv  memlat.csv  mul.csv  rob.csv  rs.csv  sizing_study.csv  width.csv  width_fixedfu.csv
src/: cdb_arbiter.cpp  decode.cpp  dispatch_reg.cpp  execution_engine.cpp  gshare_predictor.cpp  hex_loader.cpp  instruction_fetch_queue.cpp  load_store_queue.cpp  main.cpp  processor.cpp  rat_checkpoints.cpp  register_alias_table.cpp  reorder_buffer.cpp  reservation_station.cpp  return_address_stack.cpp  trace_loader.cpp
src/mem/: dcache.cpp  dram_simple.cpp  icache.cpp  memory_system.cpp
tb/imported/: alu.imem.hex  branch.imem.hex  branchtaken.imem.hex  cp1_example.imem.hex  cp2_example.imem.hex  custom_riscv.dmem.hex  custom_riscv.imem.hex  dependency_test.imem.hex  jump.imem.hex  load.dmem.hex  load.imem.hex  load_store_grinder.imem.hex  manifest.csv  ooo_test.imem.hex  riscv_mem.dmem.hex  riscv_mem.imem.hex  (+6 more)
tests/: gen_directed.py  mul_trace_demo.trace  tb_decode_ee.cpp  tb_dispatch_reg.cpp
tools/: analyze.py  bp_compare.py  check_benchmarks.py  elf_to_hex.py  gen_benchmarks.py  gen_random_tests.py  golden_rv32im.py  ipc_sizing_study.py  run_best_ipc.py  run_hex_smoke.py  run_imported_sim.py  run_sweep.py  trace2hex.py  verify.py
traces/: branch.trace  branch_no1020.trace  mem.trace  nobranch.trace  sample.trace  tiny.trace
(+251 files in other folders)
